@@ -22,6 +22,7 @@ Downgraded:
 Added:
 - Witchery 0.13.1
 - Lycanite'sMobs 1.4.1
+- HungerOverhaul 21-build3
 
 Removed:
 - FlenixCitiesCore.
